syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "rpc_mail_info.proto";

option go_package = "igbot.com/sendmail/api/pb";

message MailRecoveryAccRequest {
  string activeUrl = 1;
  EmailInfo emailInfo = 2;
  google.protobuf.Timestamp create_at = 3;
}


message MailRecoveryAccResponse {
  string status = 1;
  string message = 2;
}